yellowfin/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "password": {
            "type": "securestring",
            "metadata": {
                "description": "Password for adminstrator"
            },
            "defaultValue": "yellowfin@123"
        }
    },
    "variables": {
        "apiVersion": "2015-06-15",
        "vmname": "yellowfin-71-azure",
        "location": "eastus",
        "vmSize": "Standard_D1",
        "username": "ubuntu",
        "password": "[parameters('password')]",
        "consoleUsername": "admin@yellowfin.com.au",
        "consolePassword": "test",
        "storageAccount": "[concat(uniquestring(resourceGroup().id), 'cloudtry')]",
        "storageAccountPath": "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccount'))]",
        "vhdURIBase": "[concat('https://', variables('storageAccount'), '.blob.core.windows.net/vhds/', variables('vmname'),'_',uniquestring(resourceGroup().id),'_osDisk.vhd')]",
        "storageAccountType": "Standard_LRS",
        "networkInterfaceName": "[concat(variables('vmname'), 'nic')]",
        "networkInterfacePath": "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]",
        "networkInterfaceId": "[resourceId('Microsoft.Network/networkInterfaces',variables('networkInterfaceName'))]",
        "networkSecurityGroupName": "[concat(variables('vmname'), 'nsg')]",
        "networkSecurityGroupPath": "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]",
        "networkSecurityGroupId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]",
        "publicIPAddressName": "[concat(uniquestring(resourceGroup().id),'publicipname')]",
        "publicIPAddressPath": "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]",
        "publicIPAddressType": "Dynamic",
        "dnsNameForPublicIP": "[concat('yellowfin',uniquestring(resourceGroup().id),'publicipdns')]",
        "virtualNetworkName": "[concat(variables('vmname'), 'net')]",
        "virtualNetworkPath": "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "virtualNetworkAddressPrefix": "10.3.0.0/16",
        "subnetName": "stratoinstances",
        "subnetId": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
        "virtualSubnetAddressBase": "10.3.0.",
        "virtualSubnetAddressPrefix": "[concat(variables('virtualSubnetAddressBase'), '0/24')]",
        "imagePublisher": "yellowfin",
        "imageOffer": "yellowfin-for-azure-byol",
        "sku": "yellowfinforazurebyol",
        "planyellowfin": {
            "name": "[variables('sku')]",
            "product": "[variables('imageOffer')]",
            "publisher": "[variables('imagePublisher')]"
        }
    },
    "outputs": {
        "url": {
            "type": "string",
            "value": "[concat('http://',variables('dnsNameForPublicIP'), '.', variables('location'), '.cloudapp.azure.com')]"
        },
        "login": {
            "type": "string",
            "value": "[variables('consoleUsername')]"
        },
        "password": {
            "type": "string",
            "value": "[variables('consolePassword')]"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[variables('storageAccount')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[variables('location')]",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressName')]",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
                "dnsSettings": {
                    "domainNameLabel": "[variables('dnsNameForPublicIP')]"
                }
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[variables('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('virtualNetworkAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('virtualSubnetAddressPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroupName')]",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSHIn",
                        "properties": {
                            "description": "Allow inbound SSH connections",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[variables('virtualSubnetAddressPrefix')]",
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": 100
                        }
                    },
                    {
                        "name": "AllowHTTPIn",
                        "properties": {
                            "description": "Allow api requests",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[variables('virtualSubnetAddressPrefix')]",
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": 104
                        }
                    },
                    {
                        "name": "AllowHTTPSIn",
                        "properties": {
                            "description": "Allow api requests",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[variables('virtualSubnetAddressPrefix')]",
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": 105
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('networkInterfaceName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[variables('publicIPAddressPath')]",
                "[variables('virtualNetworkPath')]",
                "[variables('networkSecurityGroupPath')]"
            ],
            "properties": {
                "networkSecurityGroup": {
                    "id": "[variables('networkSecurityGroupId')]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[concat(variables('virtualSubnetAddressBase'), '5')]",
                            "publicIPAddress": {
                                "id": "[variables('publicIPAddressId')]"
                            },
                            "subnet": {
                                "id": "[variables('subnetId')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "location": "[variables('location')]",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmname')]",
            "dependsOn": [
                "[variables('storageAccountPath')]",
                "[variables('networkInterfacePath')]"
            ],
            "plan": "[variables('planyellowfin')]",
            "properties": {
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('networkInterfaceId')]"
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('vmname')]",
                    "adminUsername": "[variables('username')]",
                    "adminPassword": "[variables('password')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": "false"
                    }
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[variables('sku')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "caching": "ReadWrite",
                        "vhd": {
                            "uri": "[concat(variables('vhdURIBase'), '.vhd')]"
                        },
                        "createOption": "FromImage",
                        "name": "[concat(variables('vmname'), 'osDisk')]"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[variables('vmSize')]"
                }
            },
            "apiVersion": "[variables('apiVersion')]"
        }
    ]
}
